--- a/.github/workflows/podcast.yml
+++ b/.github/workflows/podcast.yml
@@ -23,8 +23,11 @@ jobs:
 
       - name: Write Google creds
         run: |
-          echo '${{ secrets.GOOGLE_CREDS }}' > $HOME/gcreds.json
+          printf '%s' "${GOOGLE_CREDS}" > $HOME/gcreds.json
           echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcreds.json" >> $GITHUB_ENV
+        shell: bash
+        env:
+          GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDS }}
 
       - name: Run pipeline
         env:
