--- a/.github/workflows/podcast.yml
+++ b/.github/workflows/podcast.yml
@@ -43,5 +43,7 @@ jobs:
           BUZZ_KEY:       ${{ secrets.BUZZ_KEY }}
           GSHEET_ID:      ${{ secrets.GSHEET_ID }}
           ELEVEN_VOICE_ID: ${{ secrets.ELEVEN_VOICE_ID }}
+          ELEVEN_VOICE_A_ID: ${{ secrets.ELEVEN_VOICE_A_ID }}
+          ELEVEN_VOICE_B_ID: ${{ secrets.ELEVEN_VOICE_B_ID }}
           BUZZ_ID:        ${{ secrets.BUZZ_ID }}
         run: python run_pipeline.py
